/*
 * *****************************************************************************
 * Copyright (c)  2026 Luis Paolo Pepe Barra (@LuisPPB16).
 * All rights reserved.
 * *****************************************************************************
 */

plugins {
    id 'java'
    id 'org.jetbrains.intellij.platform' version '2.18.1'
    id 'jacoco'
}

group = 'com.luisppb16'
version = '1.0.1'

repositories {
    mavenCentral()
    intellijPlatform {
        defaultRepositories()
    }
}

dependencies {
    // JSON - Jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.21.5'

    // CVSS base-score calculation from OSV severity vectors (v2/v3/v3.1/v4)
    implementation 'us.springett:cvss-calculator:1.5.1'

    // Report export (HTML -> PDF)
    implementation 'com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10'

    // Testing
    // JUnit 4 is kept on the test classpath because the IntelliJ Platform test framework
    // (used via the bundled test infrastructure) references org.junit.rules.TestRule at runtime.
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.14.4'
    testImplementation 'org.mockito:mockito-core:5.23.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.23.0'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    constraints {
        implementation('org.apache.pdfbox:pdfbox:2.0.31') {
            because 'openhtmltopdf 1.0.10 pulls pdfbox 2.0.24 which has known CVEs'
        }
        implementation('org.apache.pdfbox:xmpbox:2.0.31') {
            because 'keep the whole pdfbox family aligned with the pdfbox 2.0.31 upgrade'
        }
        testImplementation('org.apache.commons:commons-compress:1.28.0') {
            because 'avoid CVEs in the transitive test classpath'
        }
    }

    intellijPlatform {
        intellijIdea '2026.2'
        bundledPlugin 'org.jetbrains.idea.maven'
        bundledPlugin 'com.intellij.gradle'
        bundledPlugin 'org.intellij.groovy'
        bundledModule 'intellij.platform.ui.jcef'
        bundledModule 'intellij.libraries.jcef'
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
    options.compilerArgs << "-Xlint:all" << "-Werror" << "-Xlint:-unchecked"
}

intellijPlatform {
    buildSearchableOptions = false

    signing {
        certificateChain.set(providers.environmentVariable("CERTIFICATE_CHAIN"))
        privateKey.set(providers.environmentVariable("PRIVATE_KEY"))
        password.set(providers.environmentVariable("PRIVATE_KEY_PASSWORD"))
    }

    publishing {
        token.set(providers.environmentVariable("PUBLISH_TOKEN"))
    }

    pluginVerification {
        ides {
            recommended()
        }
    }
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
    maxHeapSize = '512m'
    jvmArgs('-Xshare:off')
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

// These tasks come from the IntelliJ Platform plugin; guard with findByName so the build script
// does not fail in environments where they are not registered.
['buildSearchableOptions', 'jarSearchableOptions'].each { name ->
    def task = tasks.findByName(name)
    if (task != null) {
        task.enabled = false
    }
}
